<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/colorAppBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:id="@+id/parallaxContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/character_detail_parallax_container"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.3">

                <com.flaviofaria.kenburnsview.KenBurnsView
                    android:id="@+id/placeholderImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/marvel_background" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_collapseMode="parallax">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/characterNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:layout_margin="@dimen/common_margin"
                    app:layout_collapseMode="parallax"
                    tools:text="Character Name" />

                <ImageView
                    android:id="@+id/characterThumbnailImageView"
                    android:layout_width="@dimen/character_thumbnail_size"
                    android:layout_height="@dimen/character_thumbnail_size"
                    android:src="@drawable/ic_image_no_available"
                    tools:ignore="ContentDescription" />
            </LinearLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:title="">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/characterDetailTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/common_margin"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_padding"
                    android:orientation="vertical">

                    <sanchez.sanchez.sergio.androidmobiletest.ui.core.component.MaterialListItem
                        android:id="@+id/characterDescriptionListItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/character_detail_list_item_margin_top"
                        app:valueText="@string/character_description_default_value"
                        app:labelText="@string/character_description_label" />

                    <sanchez.sanchez.sergio.androidmobiletest.ui.core.component.MaterialListItem
                        android:id="@+id/characterModifiedAtItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/character_detail_list_item_margin_top"
                        app:labelText="@string/character_modified_at_label" />

                    <sanchez.sanchez.sergio.androidmobiletest.ui.core.component.MaterialListItem
                        android:id="@+id/characterComicItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/character_detail_list_item_margin_top"
                        app:actionText="@string/character_comic_action"
                        app:labelText="@string/character_comic_label" />

                    <sanchez.sanchez.sergio.androidmobiletest.ui.core.component.MaterialListItem
                        android:id="@+id/characterSeriesItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/character_detail_list_item_margin_top"
                        app:actionText="@string/character_series_action"
                        app:labelText="@string/character_series_label" />

                    <sanchez.sanchez.sergio.androidmobiletest.ui.core.component.MaterialListItem
                        android:id="@+id/characterEventsItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/character_detail_list_item_margin_top"
                        app:actionText="@string/character_events_action"
                        app:labelText="@string/character_events_label" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>